fixing alignment and height of icons next to node titles on taxonomy page

--- a/src/css/dgu-drupal.less
+++ b/src/css/dgu-drupal.less
@@ -853,19 +853,21 @@ body.page-home {
 /* Book pages*/
 .node-book h2 {
   background-image: url('/assets/img/icon-book.png');
-  background-size: 30px;
+  background-size: 25px;
   background-repeat: no-repeat;
-  background-position: 10px 9px;
-  padding-left: 49px;
+  background-position: 0 6px;
+  padding-left: 30px;
+  line-height: 35px;
 }
 
 /* General pages*/
 .node-page h2 {
   background-image: url('/assets/img/icon-page.png');
-  background-size: 30px;
+  background-size: 25px;
   background-repeat: no-repeat;
-  background-position: 10px 9px;
-  padding-left: 49px;
+  background-position: 0 6px;
+  padding-left: 30px;
+  line-height: 35px;
 }
 .disclaimer {
   padding: 14px;
